<resources>
    <string name="server_base_url">https://web.yodelego.com/</string>

    <string name="id_main_fragment">id_main_fragment</string>
    <string name="id_student_fragment">id_student_fragment</string>
    <string name="id_end_fragment">id_end_fragment</string>
    <string name="id_profile">id_profile</string>
    <string name="id_wall">id_wall</string>
    <string name="id_applications">id_applications</string>
    <string name="id_profile_edit">id_profile_edit</string>

    <string name="adjudicated_applications_title">adjudicadas</string>
    <string name="reviewing_applications_title">revisión</string>
    <string name="complete_applications_title">completadas</string>

    <string name="app_name">YoDelego</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirm</string>
    <string name="agree_terms"><u>He leído y acepto los términos y condiciones</u>.</string>
    <string name="send_email">Enviar correo</string>
    <string name="login_in">Ingresar</string>
    <string name="create_account">Crear tu cuenta</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="email">Tu correo</string>
    <string name="phone">Número de teléfono (ej.+56999999999)</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="country">País</string>
    <string name="referral_code">Código de referencia (Opcional)</string>
    <!-- Strings related to signup -->
    <string name="prompt_confirm_password">Confirmar Contraseña</string>
    <string name="forgot_password">Recuperar Contraseña</string>
    <string name="please_enter_email">Por favor ingresa tu correo</string>
    <string name="forgot_password_description">Ingresa abajo tu dirección de correo electrónico, y te enviaremos las instrucciones para establecer una nueva.</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome_back">Bienvenido,</string>
    <string name="forgot_your_password">¿Olvidaste tu contraseña?</string>

    <string name="error_login_login">Problema en el servicio de login</string>
    <string name="error_login_commerce">Commerce service problem</string>
    <string name="error_login_user">Error con el inicio de sesión</string>
    <string name="error_login_devices">Devices service problem</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_create_account">Crear cuenta</string>
    <string name="error_invalid_email">El correo es inválido</string>
    <string name="error_invalid_password">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_incorrect_password_or_login">No puede iniciar con las credenciales proporcionadas. Si no se ha registrado, vaya a &lt;b>Registrarse aquí&lt;/b></string>
    <string name="error_field_required">Este campo es necesario</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="error_phone_not_valid">El teléfono no es válido</string>

    <string name="error_login">Problema al iniciar sesión</string>
    <string name="error_network">Por favor verifica tu conexión a Internet</string>
    <string name="error_server">Oops, error del servidor</string>
    <string name="error_parser">Oops, ocurrió un error mientras procesabamos tu información</string>
    <string name="error_timeout">Oops, el servidor está tardando en responder</string>
    <string name="error_form">Por favor revisa los errores en los campos del formulario</string>
    <string name="error_json_exception">Json exception</string>

    <string name="error_creating_account">Problema al crear la cuenta</string>
    <string name="error_editing_account">Problema al editar la cuenta</string>

    <string name="error_network_title">Problema de conexión</string>
    <string name="error_network_details">Necesitas Internet para completar esta acción</string>

    <!-- Strings related to signup -->
    <string name="error_field_must_be_accepted">Este campo debe ser aceptado</string>
    <string name="error_password_must_be_same">Las contraseñas deben ser las mismas</string>

    <string name="account_created_title">Registrado con éxito</string>
    <string name="account_created">Tu cuenta ha sido creada</string>

    <string name="application">Postulación</string>
    <string name="ask_application">Estas postulando al trabajo &lt;b>%1$s&lt;/b>, luego de postular te notificaremos si te lo has adjudicado. ¿Quieres postular?</string>

    <string name="cancel_application">Estas postulando al trabajo &lt;b>%1$s&lt;/b> ¿Quieres cancelar tu postulación?</string>


    <string name="applicated">Postulando</string>

    <string name="error_recovering_password">Error mientras recuperas tu contraseña</string>
    <string name="password_recovery_message">Le hemos enviado por email las instrucciones para restablecer la contraseña, si es que existe una cuenta con la dirección electrónica que indicó. Debería recibirlas en breve.</string>
    <string name="password_recovery">Recuperación de contraseña</string>

    <string name="inactive_account_title">Inactive account</string>
    <string name="inactive_account_message">Your account is not yet active. We\'ll send you an email with instructions.</string>
    <string name="message_ok">Ok</string>

    <string name="university">Universidad o Instituto de Educación Superior</string>
    <string name="career">Carrera</string>
    <string name="enrollment_year">Año de Ingreso</string>

    <string name="account_number">Número de cuenta (Opcional)</string>

    <string name="rut">Rut (ej.1111111k)</string>
    <string name="rut_hint">1111111k</string>

    <string name="text_wall">Muro</string>
    <string name="text_applications">Postulaciones</string>
    <string name="text_profile">Perfil</string>

    <string name="edit">editar</string>
    <string name="edit_photo">editar foto</string>

    <string-array name="banks_array">
        <item></item>
        <item>BANCO ESTADO</item>
        <item>BANCO SANTANDER</item>
        <item>BANCO DE CHILE / EDWARDS - CITI</item>
        <item>BANCO DE CREDITO E INVERSIONES (BCI)</item>
        <item>BANCO BICE</item>
        <item>BANCO ESTADO</item>
        <item>SCOTIABANK CHILE</item>
        <item>ITAÚ CORPBANCA</item>
        <item>BANCO BILBAO VIZCAYA ARGENTARIA, CHILE (BBVA)</item>
        <item>BANCO SECURITY</item>
        <item>BANCO FALABELLA</item>
        <item>BANCO RIPLEY</item>
        <item>BANCO CONSORCIO</item>
        <item>BANCO BTG PACTUAL CHILE</item>
        <item>BANCO INTERNACIONAL</item>
        <item>BANCO DEL DESARROLLO</item>
    </string-array>

    <string-array name="account_array">
        <item></item>
        <item>Cuenta Corriente</item>
        <item>Cuenta de Ahorro</item>
        <item>Cuenta Vista</item>
    </string-array>
</resources>


    <!--<resources>
    <string name="server_base_url">http://www.transactfirst.com/</string>

    <string name="id_main_fragment">id_main_fragment</string>
    <string name="id_student_fragment">id_student_fragment</string>
    <string name="id_end_fragment">id_end_fragment</string>

    <string name="app_name">YoDelego</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="agree_terms">Agree to the terms &amp; condition loreim ipsum must explain to you how all this mistaken idea of denouncing pleasure.</string>
    <string name="send_email">Send Email</string>
    <string name="login_in">Log in</string>
    <string name="create_account">Create your account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Your email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="country">Country</string>
    <string name="referral_code">Referral code (Optional)</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_email">Please enter your Email</string>
    <string name="forgot_password_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="forgot_your_password">Forgot your password?</string>

    <string name="error_login_login">Login service problem</string>
    <string name="error_login_commerce">Commerce service problem</string>
    <string name="error_login_user">User service problem</string>
    <string name="error_login_devices">Devices service problem</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_create_account">Create account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password_or_login">Oops, incorrect login information</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


    <string name="error_login">Login problem</string>
    <string name="error_network">Oops, network error, please check your internet connection</string>
    <string name="error_server">Oops, server error, please contact us for support</string>
    <string name="error_parser">Oops, an error occurred while processing your information</string>
    <string name="error_timeout">Oops, The server is taking too long to respond</string>
    <string name="error_json_exception">Json exception</string>

    <string name="error_field_must_be_accepted">This field must be accepted</string>
    <string name="error_password_must_be_same">The passwords must be the same</string>

    <string name="account_created_title">Successfully registered</string>
    <string name="account_created">Your account has been created</string>

    <string name="error_recovering_password">Error while recovering your password</string>
    <string name="password_recovery_message">Password recovery success</string>
    <string name="password_recovery">Password recovery</string>

    <string name="inactive_account_title">Inactive account</string>
    <string name="inactive_account_message">Your account is not yet active. We\'ll send you an email with instructions.</string>
    <string name="message_ok">Ok</string>

    <string name="university">University</string>
    <string name="career">Career</string>
    <string name="semester">Semester</string>

    <string name="rut">Rut</string>
</resources>-->
