<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterMainFragment">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <kiwigroup.yodelego.customui.DynamicTextView
                android:id="@+id/intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:maxLines="3"
                android:text="Actualmente... ¿Estudias alguna carrera o perteneces a algún establecimiento de educación superior?"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="27sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/intro"
                android:gravity="center_horizontal"
                android:padding="10dp">

                <ToggleButton
                    android:id="@+id/student"
                    android:layout_width="75dp"
                    android:layout_height="60dp"
                    android:background="@drawable/button_selector"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textOff="Sí"
                    android:textOn="Sí"
                    android:textSize="17sp" />

                <ToggleButton
                    android:id="@+id/no_student"
                    android:layout_width="75dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="55dp"
                    android:background="@drawable/button_selector"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textOff="No"
                    android:textOn="No"
                    android:textSize="17sp" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/first_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/type"
                android:layout_marginTop="20dp">

                <AutoCompleteTextView
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="17sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/last_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_name_layout"
                android:layout_marginTop="15dp">

                <AutoCompleteTextView
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="17sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/id_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/last_name_layout"
                android:layout_marginTop="15dp">

                <AutoCompleteTextView
                    android:id="@+id/rut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rut"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="17sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/id_layout"
                android:layout_marginTop="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="17sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mail_layout"
                android:layout_marginTop="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="17sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_layout"
                android:layout_marginTop="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="17sp" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirm_password_layout"
                android:layout_marginTop="30dp"
                android:checked="false"
                android:text="@string/agree_terms" />

            <Button
                android:id="@+id/create_account_button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/terms"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_primary_background"
                android:text="@string/action_create_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/create_account_button"
                android:background="@drawable/button_secondary_background"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorTextSecondaryButton"
                android:textSize="17sp" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>
