<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/thirdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo" />

            <kiwigroup.yodelego.customui.DynamicTextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="60dp"
                android:layout_below="@+id/logo"
                android:maxLines="1"
                android:text="@string/forgot_your_password"
                android:textSize="27sp"
                android:layout_gravity="start" />

            <kiwigroup.yodelego.customui.DynamicTextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/text1"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/please_enter_email"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <kiwigroup.yodelego.customui.DynamicTextView
                android:id="@+id/forgot_password_description"
                android:text="@string/forgot_password_description"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:maxLines="2"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_black"
                android:textSize="14sp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_password_description"
                android:layout_marginTop="30dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/create_account"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/email_layout"
                android:background="@drawable/button_primary_background"
                android:textColor="@color/white"
                android:onClick="forgetClicked"
                android:text="@string/send_email"
                android:textSize="17sp"
                android:textAllCaps="false" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
